...
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Acciones"
            android:textColor="#1A1A1A"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnNuevoEquipoInformatico"
...
